--- a/nix/app/gomod2nix.toml
+++ b/nix/app/gomod2nix.toml
@@ -1,33 +1,120 @@
 schema = 3
 
 [mod]
+  [mod."github.com/CAFxX/httpcompression"]
+    version = "v0.0.9"
+    hash = "sha256-4XZezA0QypS2p6Vx8K61Crmp/q5MFco/f5mmBPmruZk="
   [mod."github.com/a-h/templ"]
-    version = "v0.3.898"
-    hash = "sha256-UOiJihQrOok6bNvxrCQfgocEmICCI/Mmmk1vF9ntQCc="
-  [mod."github.com/delaneyj/gostar"]
-    version = "v0.8.0"
-    hash = "sha256-K0nm/OxEq4e3FLfUqOawMHIGkHZV69B3qJyBcLY4E9A="
+    version = "v0.3.906"
+    hash = "sha256-xz3azc9x3JTk35ls1WalgczUzPCKr7dxoNmCCgHOTVg="
+  [mod."github.com/andybalholm/brotli"]
+    version = "v1.1.1"
+    hash = "sha256-kCt+irK1gvz2lGQUeEolYa5+FbLsfWlJMCd5hm+RPgQ="
+  [mod."github.com/davecgh/go-spew"]
+    version = "v1.1.2-0.20180830191138-d8f796af33cc"
+    hash = "sha256-fV9oI51xjHdOmEx6+dlq7Ku2Ag+m/bmbzPo6A4Y74qc="
+  [mod."github.com/fogleman/gg"]
+    version = "v1.3.0"
+    hash = "sha256-Fs2JI0FmF4N5EzXJzGAPZMxZxo6wKyebkN/iBZ9sdNo="
+  [mod."github.com/fsnotify/fsnotify"]
+    version = "v1.8.0"
+    hash = "sha256-+Rxg5q17VaqSU1xKPgurq90+Z1vzXwMLIBSe5UsyI/M="
   [mod."github.com/go-chi/chi/v5"]
     version = "v5.2.1"
     hash = "sha256-oOi39n1MMETVl9ZKCODhlmFe0f/znEgxI3nJOW8yy2o="
-  [mod."github.com/goccy/go-json"]
-    version = "v0.10.5"
-    hash = "sha256-/EtlGihP0/7oInzMC5E0InZ4b5Ad3s4xOpqotloi3xw="
-  [mod."github.com/igrmk/treemap/v2"]
-    version = "v2.0.1"
-    hash = "sha256-4YFMjPiznVpQwBwBBb6SkhuNEgTHf84eZMWnGiD0RS8="
-  [mod."github.com/samber/lo"]
-    version = "v1.51.0"
-    hash = "sha256-Vgixn+tB/Rb8G2NTS3PuZO7iaXvmZtMaSvLETJhWIWM="
-  [mod."github.com/starfederation/datastar"]
-    version = "v1.0.0-beta.11"
-    hash = "sha256-7Bsnoboy8zVrWeueg0KcedpMeHton643dGtGhUsxq+s="
+  [mod."github.com/go-rod/rod"]
+    version = "v0.116.2"
+    hash = "sha256-f66euaZq7TEZOmTw7vVw0ScmKRTuYZ4Epz/fMQwZXds="
+  [mod."github.com/go-viper/mapstructure/v2"]
+    version = "v2.2.1"
+    hash = "sha256-3BcbxiZQp3eglk+vaYnRIDGT4dQ9K8aLrTPODbToI/Q="
+  [mod."github.com/golang/freetype"]
+    version = "v0.0.0-20170609003504-e2365dfdc4a0"
+    hash = "sha256-AHAFBd20/tqxohkWyQkui2bUef9i1HWYgk9LOIFErvA="
+  [mod."github.com/klauspost/compress"]
+    version = "v1.18.0"
+    hash = "sha256-jc5pMU/HCBFOShMcngVwNMhz9wolxjOb579868LtOuk="
+  [mod."github.com/pelletier/go-toml/v2"]
+    version = "v2.2.3"
+    hash = "sha256-fE++SVgnCGdnFZoROHWuYjIR7ENl7k9KKxQrRTquv/o="
+  [mod."github.com/pkg/errors"]
+    version = "v0.9.1"
+    hash = "sha256-mNfQtcrQmu3sNg/7IwiieKWOgFQOVVe2yXgKBpe/wZw="
+  [mod."github.com/pmezard/go-difflib"]
+    version = "v1.0.1-0.20181226105442-5d4384ee4fb2"
+    hash = "sha256-XA4Oj1gdmdV/F/+8kMI+DBxKPthZ768hbKsO3d9Gx90="
+  [mod."github.com/sagikazarmark/locafero"]
+    version = "v0.7.0"
+    hash = "sha256-ZmaGOKHDw18jJqdkwQwSpUT11F9toR6KPs3241TONeY="
+  [mod."github.com/sourcegraph/conc"]
+    version = "v0.3.0"
+    hash = "sha256-mIdMs9MLAOBKf3/0quf1iI3v8uNWydy7ae5MFa+F2Ko="
+  [mod."github.com/spf13/afero"]
+    version = "v1.12.0"
+    hash = "sha256-TX3DcyAdrXqf+TxmEz4TilWQo2Y4hcBXOeRY6BjDp+s="
+  [mod."github.com/spf13/cast"]
+    version = "v1.7.1"
+    hash = "sha256-BjX0aY/PC37gIdMc7JhMgvhWFsksGdAcp2FgzpuvkPo="
+  [mod."github.com/spf13/pflag"]
+    version = "v1.0.6"
+    hash = "sha256-NjrK0FZPIfO/p2xtL1J7fOBQNTZAPZOC6Cb4aMMvhxI="
+  [mod."github.com/spf13/viper"]
+    version = "v1.20.1"
+    hash = "sha256-gbCM0k7RAlvn7jpSuWB2LX5Nip9vgwsPNGbDXTI7JvM="
+  [mod."github.com/starfederation/datastar-go"]
+    version = "v1.0.1"
+    hash = "sha256-p8pS1xlKv78Hz5pjdGIFO5r5za8WZs0KOL2SGzt6D+0="
+  [mod."github.com/stretchr/testify"]
+    version = "v1.10.0"
+    hash = "sha256-fJ4gnPr0vnrOhjQYQwJ3ARDKPsOtA7d4olQmQWR+wpI="
+  [mod."github.com/subosito/gotenv"]
+    version = "v1.6.0"
+    hash = "sha256-LspbjTniiq2xAICSXmgqP7carwlNaLqnCTQfw2pa80A="
   [mod."github.com/valyala/bytebufferpool"]
     version = "v1.0.0"
     hash = "sha256-I9FPZ3kCNRB+o0dpMwBnwZ35Fj9+ThvITn8a3Jr8mAY="
-  [mod."golang.org/x/exp"]
-    version = "v0.0.0-20250606033433-dcc06ee1d476"
-    hash = "sha256-6l2SmFtORAIXmsWGWrseCCR0HCoMd3Tpxdus00mJh3Q="
+  [mod."github.com/yeqown/go-qrcode/v2"]
+    version = "v2.2.5"
+    hash = "sha256-JdyrTqbTwNakGXcVJdYx2bL+oJq/5mQLhXnagdpvwiw="
+  [mod."github.com/yeqown/go-qrcode/writer/standard"]
+    version = "v1.3.0"
+    hash = "sha256-F1wVFPmu/aLmhHomAve0o1pFkCdeM0GO3FOFtTIaHxc="
+  [mod."github.com/yeqown/reedsolomon"]
+    version = "v1.0.0"
+    hash = "sha256-VavvmY+PTNm4i1xD5dsXLZCk7GF0tibBGE4c/kfn9qg="
+  [mod."github.com/ysmood/fetchup"]
+    version = "v0.2.4"
+    hash = "sha256-SnPR/ZQEUUSv9QoBo23W3L7+FS/iVvfd7DSoP8kXEK0="
+  [mod."github.com/ysmood/goob"]
+    version = "v0.4.0"
+    hash = "sha256-o0yVrxQRbN1dSjBH359VHADzPmkyrYOp7jn1GqIYhvw="
+  [mod."github.com/ysmood/got"]
+    version = "v0.40.0"
+    hash = "sha256-VI/UDjV2xDjOblYxN2Dr0gxGyFMseKgCsWGx+MhZELM="
+  [mod."github.com/ysmood/gson"]
+    version = "v0.7.3"
+    hash = "sha256-Dn5cTopPKtKCjQ7G6nlvPW2d7G4c5NfIdLVM9eLgR0E="
+  [mod."github.com/ysmood/leakless"]
+    version = "v0.9.0"
+    hash = "sha256-nGfyb2fFT1AN33AtsCj+9xcAiK5XjHLlH/Oqc3DRyo8="
+  [mod."go.uber.org/atomic"]
+    version = "v1.9.0"
+    hash = "sha256-D8OtLaViqPShz1w8ijhIHmjw9xVaRu0qD2hXKj63r4Q="
+  [mod."go.uber.org/multierr"]
+    version = "v1.9.0"
+    hash = "sha256-tlDRooh/V4HDhZohsUrxot/Y6uVInVBtRWCZbj/tPds="
+  [mod."golang.org/x/image"]
+    version = "v0.23.0"
+    hash = "sha256-6bqCdzSZE8oQWRIJszgVvy4MTmh5MDNRRdpIAD9mo3Y="
+  [mod."golang.org/x/sys"]
+    version = "v0.32.0"
+    hash = "sha256-c9RRnyKQy9Kl8hpbtcgkm1O5H7gOdk9Rv925F8fZS6E="
   [mod."golang.org/x/text"]
     version = "v0.26.0"
     hash = "sha256-N+27nBCyGvje0yCTlUzZoVZ0LRxx4AJ+eBlrFQVRlFQ="
+  [mod."golang.org/x/time"]
+    version = "v0.12.0"
+    hash = "sha256-Cp3oxrCMH2wyxjzr5SHVmyhgaoUuSl56Uy00Q7DYEpw="
+  [mod."gopkg.in/yaml.v3"]
+    version = "v3.0.1"
+    hash = "sha256-FqL9TKYJ0XkNwJFnq9j0VvJ5ZUU1RvH/52h/f5bkYAU="
